; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libusb/extr_libusb10.c_libusb_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libusb/extr_libusb10.c_libusb_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.libusb20_device = type { i32 }
%struct.libusb_device = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @libusb_close(%struct.libusb20_device* %0) #0 {
  %2 = alloca %struct.libusb20_device*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.libusb_device*, align 8
  store %struct.libusb20_device* %0, %struct.libusb20_device** %2, align 8
  %5 = load %struct.libusb20_device*, %struct.libusb20_device** %2, align 8
  %6 = icmp eq %struct.libusb20_device* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %24

8:                                                ; preds = %1
  %9 = load %struct.libusb20_device*, %struct.libusb20_device** %2, align 8
  %10 = call %struct.libusb_device* @libusb_get_device(%struct.libusb20_device* %9)
  store %struct.libusb_device* %10, %struct.libusb_device** %4, align 8
  %11 = load %struct.libusb_device*, %struct.libusb_device** %4, align 8
  %12 = getelementptr inbounds %struct.libusb_device, %struct.libusb_device* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %3, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = load %struct.libusb_device*, %struct.libusb_device** %4, align 8
  %16 = getelementptr inbounds %struct.libusb_device, %struct.libusb_device* %15, i32 0, i32 0
  %17 = call i32 @libusb10_remove_pollfd(i32* %14, i32* %16)
  %18 = load %struct.libusb20_device*, %struct.libusb20_device** %2, align 8
  %19 = call i32 @libusb20_dev_close(%struct.libusb20_device* %18)
  %20 = load %struct.libusb_device*, %struct.libusb_device** %4, align 8
  %21 = call i32 @libusb_unref_device(%struct.libusb_device* %20)
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @libusb10_wakeup_event_loop(i32* %22)
  br label %24

24:                                               ; preds = %8, %7
  ret void
}

declare dso_local %struct.libusb_device* @libusb_get_device(%struct.libusb20_device*) #1

declare dso_local i32 @libusb10_remove_pollfd(i32*, i32*) #1

declare dso_local i32 @libusb20_dev_close(%struct.libusb20_device*) #1

declare dso_local i32 @libusb_unref_device(%struct.libusb_device*) #1

declare dso_local i32 @libusb10_wakeup_event_loop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
